fixed dark mode

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,6 +7,5 @@
 .app-dark-mode{
     background-color: #364953;
     height: '100vh';
-    height: '100%';
     min-height: '100vh';
 }
