--- a/src/components/SavedArticles/SavedArticles.css
+++ b/src/components/SavedArticles/SavedArticles.css
@@ -1,8 +1,7 @@
 .saved-articles {
     text-align: center;
+    height: 100vh;
 }
-
-
 
 .main {
     display: flex;
